# gtkcrosscc

./: .gitignore  CMakeLists.txt  Dockerfile  package.sh  readme.md  toolchain_mingw.cmake
src/: main.cc
